--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lomba Web Design</title>
-
+    <title>Free Online Course</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 
 <body>
 
 
 
+
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
