--- a/index.html
+++ b/index.html
@@ -16,6 +16,108 @@
 
 <body>
 
+    <!-- Container -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <div class="container">
+        <section>
+            <div class="row">
+                <h1>You will gain</h1>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4">
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="col-md-6">
+                    <!-- Gambar -->
+                </div>
+                <div class="col-md-6">
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+        </section>
+        <section>
+            <!-- List of Course -->
+            <div class="row">
+                <h2>List of Course</h2>
+                <p>We have so many courses here, Try one of these course that might interest you</p>
+            </div>
+            <!-- Grid ALbiruni -->
+        </section>
+        <section>
+            <div class="row">
+                <h2>Instructor</h2>
+                <p>Meet our best instructors, You are free to ask and discuss with them during the course</p>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4">
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <h1>Get in touch</h1>
+                <p>Feel free to Contact us further. Let us know if you have some questions</p>
+                <div class="col-md-6">
+                    <!-- Forms -->
+                </div>
+                <div class="col-md-6">
+                    <!-- Contact Info -->
+                </div>
+
+            </div>
+        </section>
+        <footer>
+
+        </footer>
+    </div>
+
 
 
 
