--- a/index.html
+++ b/index.html
@@ -17,34 +17,44 @@
 <body>
 
     <!-- Container -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
 
-        <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
 
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
+            </div>
+        </nav>
+    </header>
 
+    <!-- Jumbotron -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Upgrade Your Skill with us for free</h1>
+            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
-    </nav>
+    </div>
+
 
     <div class="container">
         <section>
             <div class="row">
-                <h1>You will gain</h1>
+                <h2>You will gain</h2>
                 <div class="col-md-4">
 
                 </div>
@@ -82,7 +92,11 @@
             <div class="row">
                 <h2>List of Course</h2>
                 <p>We have so many courses here, Try one of these course that might interest you</p>
+                <div class="grid">
+
+                </div>
             </div>
+
             <!-- Grid ALbiruni -->
         </section>
         <section>
@@ -102,7 +116,7 @@
         </section>
         <section>
             <div class="row">
-                <h1>Get in touch</h1>
+                <h2>Get in touch</h2>
                 <p>Feel free to Contact us further. Let us know if you have some questions</p>
                 <div class="col-md-6">
                     <!-- Forms -->
