--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -51,10 +54,11 @@
     </div>
 
 
-    <div class="container">
-        <section>
-            <div class="row">
-                <h2>You will gain</h2>
+    <div class="container ">
+        <!-- You will gain -->
+        <section class="mt-4">
+            <div class="row justify-content-center text-center">
+                <h2 class="mb-4">You will gain</h2>
                 <div class="col-md-4">
 
                 </div>
@@ -66,8 +70,8 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="row">
+        <section class="mt-5">
+            <div class="row justify-content-center">
                 <div class="col-md-6">
                     <!-- Gambar -->
                 </div>
@@ -76,32 +80,36 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="col-md-4">
+        <section class="mt-5">
+            <div class="row justify-content-center text-center">
+                <div class="col-md-4">
 
-            </div>
-            <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
 
-            </div>
-            <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
+
+                </div>
+
 
             </div>
         </section>
-        <section>
+        <section class="mt-5">
             <!-- List of Course -->
-            <div class="row">
-                <h2>List of Course</h2>
+            <div class="row justify-content-center text-center">
+                <h2 class="mb-4">List of Course</h2>
                 <p>We have so many courses here, Try one of these course that might interest you</p>
                 <div class="grid">
 
                 </div>
             </div>
 
-            <!-- Grid ALbiruni -->
+            <!-- Grid Albiruni -->
         </section>
-        <section>
-            <div class="row">
-                <h2>Instructor</h2>
+        <section class="mt-5">
+            <div class="row justify-content-center text-center">
+                <h2 class="mb-4">Instructor</h2>
                 <p>Meet our best instructors, You are free to ask and discuss with them during the course</p>
                 <div class="col-md-4">
 
@@ -114,9 +122,9 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="row">
-                <h2>Get in touch</h2>
+        <section class="mt-5">
+            <div class="row justify-content-center text-center">
+                <h2 class="mb-4">Get in touch</h2>
                 <p>Feel free to Contact us further. Let us know if you have some questions</p>
                 <div class="col-md-6">
                     <!-- Forms -->
