--- a/index.html
+++ b/index.html
@@ -58,16 +58,22 @@
         <!-- You will gain -->
         <section class="mt-4">
             <div class="row justify-content-center text-center">
-                <h2 class="mb-4">You will gain</h2>
-                <div class="col-md-4">
-
+                <div class="col-md-12 mb-4">
+                    <h2 class="">You will gain</h2>
                 </div>
-                <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-4">
 
-                </div>
-                <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
 
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
                 </div>
+
+
             </div>
         </section>
         <section class="mt-5">
@@ -98,8 +104,11 @@
         <section class="mt-5">
             <!-- List of Course -->
             <div class="row justify-content-center text-center">
-                <h2 class="mb-4">List of Course</h2>
-                <p>We have so many courses here, Try one of these course that might interest you</p>
+                <div class="col-md-12 mb-4">
+                    <h2 class="mb-3">List of Course</h2>
+                    <p>We have so many courses here, Try one of these course that might interest you</p>
+                </div>
+
                 <div class="grid">
 
                 </div>
@@ -109,23 +118,31 @@
         </section>
         <section class="mt-5">
             <div class="row justify-content-center text-center">
-                <h2 class="mb-4">Instructor</h2>
-                <p>Meet our best instructors, You are free to ask and discuss with them during the course</p>
-                <div class="col-md-4">
-
+                <div class="col-md-12 mb-4">
+                    <h2 class="mb-3">Instructor</h2>
+                    <p>Meet our best instructors, You are free to ask and discuss with them during the course</p>
                 </div>
-                <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-4">
 
-                </div>
-                <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
 
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
                 </div>
+
             </div>
         </section>
         <section class="mt-5">
             <div class="row justify-content-center text-center">
-                <h2 class="mb-4">Get in touch</h2>
-                <p>Feel free to Contact us further. Let us know if you have some questions</p>
+                <div class="col-md-12 mb-4">
+                    <h2 class="mb-3">Get in touch</h2>
+                    <p>Feel free to Contact us further. Let us know if you have some questions</p>
+                </div>
+
                 <div class="col-md-6">
                     <!-- Forms -->
                 </div>
