--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
 </head>
 
@@ -110,7 +111,14 @@
                 </div>
 
                 <div class="grid">
+                    <div class="content-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/" alt="">
+                        </div>
+                        <div class="text-wrapper">
 
+                        </div>
+                    </div>
                 </div>
             </div>
 
