--- a/index.html
+++ b/index.html
@@ -102,28 +102,68 @@
 
             </div>
         </section>
-        <section class="mt-5">
-            <!-- List of Course -->
-            <div class="row justify-content-center text-center">
-                <div class="col-md-12 mb-4">
-                    <h2 class="mb-3">List of Course</h2>
-                    <p>We have so many courses here, Try one of these course that might interest you</p>
+    </div>
+    <section class="mt-5">
+        <!-- List of Course -->
+        <div class="row justify-content-center text-center">
+            <div class="col-md-12 mb-4">
+                <h2 class="mb-3">List of Course</h2>
+                <p>We have so many courses here, Try one of these course that might interest you</p>
+            </div>
+
+            <div class="grid">
+                <div class="content-wrapper">
+                    <div class="img-wrapper">
+                        <div class="bg-gradient">
+
+                        </div>
+                        <img src="img/5.jpg" alt="">
+                    </div>
+                    <div class="text-wrapper">
+                        <p>Data Science <i class="fas fa-chevron-right"></i> </p>
+                    </div>
                 </div>
-
-                <div class="grid">
-                    <div class="content-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/" alt="">
-                        </div>
-                        <div class="text-wrapper">
+                <div class="content-wrapper">
+                    <div class="img-wrapper">
+                        <div class="bg-gradient">
 
                         </div>
+                        <img src="img/blur-close-up-connection-1624895.jpg" alt="">
+                    </div>
+                    <div class="text-wrapper">
+                        <p>Internet of Things <i class="fas fa-chevron-right"></i> </p>
+                    </div>
+                </div>
+                <div class="content-wrapper">
+                    <div class="img-wrapper">
+                        <div class="bg-gradient">
+
+                        </div>
+                        <img src="img/3.jpg" alt="">
+                    </div>
+                    <div class="text-wrapper">
+                        <p>Data Engineering <i class="fas fa-chevron-right"></i> </p>
+                    </div>
+                </div>
+                <div class="content-wrapper">
+                    <div class="img-wrapper">
+                        <div class="bg-gradient">
+
+                        </div>
+                        <img src="img/2.jpg" alt="">
+                    </div>
+                    <div class="text-wrapper">
+                        <p>Machine Learning <i class="fas fa-chevron-right"></i> </p>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Grid Albiruni -->
-        </section>
+        <!-- Grid Albiruni -->
+    </section>
+    <div class="container">
+
+
         <section class="mt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-md-12 mb-4">
@@ -160,10 +200,11 @@
 
             </div>
         </section>
-        <footer>
-
-        </footer>
     </div>
+    <footer>
+
+    </footer>
+
 
 
 
