--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
     </div>
     <section class="mt-5">
         <!-- List of Course -->
+
         <div class="row justify-content-center text-center">
             <div class="col-md-12 mb-4">
                 <h2 class="mb-3">List of Course</h2>
-                <p>We have so many courses here, Try one of these course that might interest you</p>
+                <p class="m-4">We have so many courses here, Try one of these course that might interest you</p>
             </div>
 
             <div class="grid">
-                <div class="content-wrapper">
+                <div class="content-wrapper" id="ds">
                     <div class="img-wrapper">
                         <div class="bg-gradient">
 
@@ -123,7 +124,7 @@
                         <p>Data Science <i class="fas fa-chevron-right"></i> </p>
                     </div>
                 </div>
-                <div class="content-wrapper">
+                <div class="content-wrapper " id="iot">
                     <div class="img-wrapper">
                         <div class="bg-gradient">
 
@@ -134,7 +135,7 @@
                         <p>Internet of Things <i class="fas fa-chevron-right"></i> </p>
                     </div>
                 </div>
-                <div class="content-wrapper">
+                <div class="content-wrapper " id="de">
                     <div class="img-wrapper">
                         <div class="bg-gradient">
 
@@ -145,7 +146,7 @@
                         <p>Data Engineering <i class="fas fa-chevron-right"></i> </p>
                     </div>
                 </div>
-                <div class="content-wrapper">
+                <div class="content-wrapper " id="ml">
                     <div class="img-wrapper">
                         <div class="bg-gradient">
 
