--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Container -->
     <header>
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -44,6 +45,7 @@
 
             </div>
         </nav>
+        <!-- Navbar -->
     </header>
 
     <!-- Jumbotron -->
@@ -53,6 +55,8 @@
             <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
     </div>
+    <!-- Jumbotron -->
+
 
 
     <div class="container ">
@@ -77,6 +81,9 @@
 
             </div>
         </section>
+        <!-- You will gain -->
+
+        <!-- Learn with 5k members -->
         <section class="mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -102,9 +109,12 @@
 
             </div>
         </section>
+        <!-- Learn with 5k members -->
     </div>
+
+    <!-- List of Course -->
     <section class="mt-5">
-        <!-- List of Course -->
+
 
         <div class="row justify-content-center text-center">
             <div class="col-md-12 mb-4">
@@ -160,11 +170,13 @@
             </div>
         </div>
 
-        <!-- Grid Albiruni -->
+
     </section>
+    <!-- List of Course -->
+
     <div class="container">
 
-
+        <!-- Instructors -->
         <section class="mt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-md-12 mb-4">
@@ -185,6 +197,11 @@
 
             </div>
         </section>
+
+        <!-- Instructors -->
+
+        <!-- Contact -->
+
         <section class="mt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-md-12 mb-4">
@@ -201,11 +218,73 @@
 
             </div>
         </section>
+
+        <!-- Contact -->
+
     </div>
-    <footer>
+
+    <!-- Footer -->
+    <div class="divider">
+        <div class="divider-wrapper">
+            <img src="assets/fdivier.svg" alt="">
+        </div>
+    </div>
+    <footer class="">
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3 class="mb-4">LOGO.</h3>
+                    <h5 class="mb-2">Jakarta Indonesia</h5>
+                    <p>Jl. KH Agus Salim 16, Sabang, Menteng Jakarta Pusat</p>
+
+                </div>
+                <div class="col-md-8">
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Courses</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="social-media">
+                        <ul>
+                            <li>
+                                <a href="#"><img src="assets/medium.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/fb.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/youtube.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="assets/twitter.svg" alt=""></a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="copyright col-md-12">
+                    <p>Copyright 2019 : www.website.com</p>
+                    <div class="privacy">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Service</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
     </footer>
 
+
+    <!-- Footer -->
 
 
 
